# f1-eventlogger-rs

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs  session.rs
