[package]
name = "f1-eventlogger-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
f1-telemetry = { git = "https://github.com/mathieu-lemay/f1-telemetry-rs" }

clap = { version = "4.5.20", features = ["derive", "env"] }
tokio = { version = "1.41.1", features = ["time", "sync"] }
serde_json = "1"
csv = "1.3.1"
